feat: added download uploaded file functionality
